feat: add multiple trips saving